<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_add_in_favorites_list"
        android:title="@string/add_in_favorites_list"
        android:icon="@drawable/ic_favorite" />

    <item
        android:id="@+id/item_remove_from_favorites_list"
        android:title="@string/remove_from_favorites_list"
        android:icon="@drawable/ic_favorite"
        android:visible="false" />

    <item
        android:id="@+id/item_lock_note"
        android:title="@string/lock_note"
        android:icon="@drawable/ic_lock" />

    <item
        android:id="@+id/item_unlock_note"
        android:title="@string/unlock_note"
        android:icon="@drawable/ic_lock"
        android:visible="false" />

    <item
        android:id="@+id/item_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_trash" />

</menu>